OJ-2545: Add a method to ListUtil to exclude elements from a list using a custom comparator